Completed Book 3 Chapter 8 and leveraged Firebase to add Firebase authentication to the Streamish app

--- a/Streamish/appsettings.json
+++ b/Streamish/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost\\SQLExpress;database=Streamish;integrated security=true"
-  }
+  },
+  "FirebaseProjectId": "streamish-c6043"
 }
 
